# werewolf-ai-battle

./: .SourceSageignore  .gitignore  LICENSE  README.md  pyproject.toml  test_chat.py
.claude/: CLAUDE.md
docs/: GODVIEW_WEB_REQUIREMENTS.md
prompts/: moderator.txt  villager.txt  werewolf.txt
scripts/: setup-players.sh  setup.sh  start-game.sh  start_game.py  stop-game.sh  test-chat.py
server/: __init__.py  client.py  godview.py  server.py
tests/: test_disconnect.py  test_duplicate.py  test_godview.py  test_godview_scroll.py
werewolf/: .gitignore  README.md
werewolf/player1/.claude/: CLAUDE.md
werewolf/player2/.claude/: CLAUDE.md
werewolf/player3/.claude/: CLAUDE.md
werewolf/player4/: README.md
werewolf/player4/.claude/: CLAUDE.md
werewolf/player5/.claude/: CLAUDE.md
werewolf/player6/: README.md
werewolf/player6/.claude/: CLAUDE.md
